--- a/package.json
+++ b/package.json
@@ -16,12 +16,10 @@
     "@angular/platform-browser-dynamic": "~2.4.0",
     "@angular/router": "~3.4.0",
     "@angular/upgrade": "~2.4.0",
+    "chart.js": "^2.6.0",
+    "concurrently": "^3.1.0",
     "core-js": "^2.4.1",
-    "reflect-metadata": "^0.1.3",
-    "rxjs": "5.2.0",
-    "systemjs": "0.19.46",
-    "zone.js": "^0.7.2",
-
+    "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "3.1.1",
     "gulp-cli": "^1.2.1",
@@ -29,17 +27,20 @@
     "gulp-htmlmin": "^3.0.0",
     "gulp-newer": "^1.1.0",
     "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^2.0.1",
-    "concurrently": "^3.1.0",
-    "del": "^2.2.0",
     "gulp-sourcemaps": "^2.4.1",
     "gulp-tslint": "^7.0.1",
     "gulp-typescript": "^3.1.3",
+    "gulp-uglify": "^2.0.1",
     "lite-server": "^2.2.2",
+    "ng2-charts": "^1.6.0",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.2.0",
+    "systemjs": "0.19.46",
+    "ts-node": "^2.1.0",
     "tslint": "^4.0.2",
     "typescript": "^2.1.4",
     "typings": "^2.0.0",
-    "ts-node": "^2.1.0"
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {}
 }
